@@ -285,7 +285,7 @@ public class TutorialGroupService {
      */
     public List<TutorialGroup> findAllForNotifications(User user) {
         return courseRepository.findAllActiveWithTutorialGroupsWhereUserIsRegisteredOrTutor(ZonedDateTime.now(), user.getId()).stream()
-                .flatMap(course -> course.getTutorialGroups().stream()).collect(Collectors.toList());
+                .flatMap(course -> course.getTutorialGroups().stream()).toList();
     }
 
     /**
